fixed animation and layout shift

--- a/packages/frontend/src/pages/about-me/about-me.module.scss
+++ b/packages/frontend/src/pages/about-me/about-me.module.scss
@@ -21,6 +21,7 @@
   overflow: hidden !important;
   padding-top: $height-progressbar;
   margin-bottom: -$page-body-padding-desktop;
+  position: relative;
 }
 
 .about-me__content-panel {
